--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -2,10 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WDD131</title>
+    <link rel="stylesheet" href="styles/layout.css">
 </head>
 <body>
-    
+    <header>Header Content</header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Projects</a>
+        <a href="#">Services</a>
+        <a href="#">Contact Us</a>
+    </nav>
+    <main>
+        <div class="main-content">Main Content</div>
+        <div class="main-content2">Aside Content</div>    
+    </main>
+    <footer>
+        <p>Footer Content</p>
+    </footer>
+
 </body>
 </html>
+
