--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Media Query Example</title>
   <meta name="description" content="Media Query Example Page">
-  <meta name="author" content="Your Name">
+  <meta name="author" content="Eimi Miyake">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/media-query.css">
   <link rel="stylesheet" href="styles/media-query-large.css" media="screen and (min-width: 500px)">
