--- a/temples.html
+++ b/temples.html
@@ -21,12 +21,11 @@
 
 
 
-
-
 </head>
 <body>
     <header>
         <h1>Temple Album</h1>
+        <button class="menu-button">&#9776;</button>
         <nav id="menu">
             <ul>
                 <li><a href="#">Home</a></li>
