--- a/place.html
+++ b/place.html
@@ -14,6 +14,7 @@
     <main>
         <section class="hero">
             <picture>
+                <source srcset="images/tokyo_phone.webp" media="(max-width: 767px)">
                 <source srcset="images/tokyoview.webp" media="(min-width: 768px)">
                 <img src="images/tokyoview.webp" alt="Tokyo View">
             </picture>
