--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -23,14 +23,14 @@
             margin: 20px;
             padding: 20px;
             border-radius: 5px;
-            background-color: #fff;
+            background-color: #ffffff;
             font-family: "Black Ops One", system-ui;
         }
         section {
             margin: 20px;
             padding: 20px;
             border-radius: 5px;
-            background-color: #fff;
+            background-color: #ffffff;
         }
         h1 {
             color: #000000;
