--- a/project/home.html
+++ b/project/home.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,38 +13,42 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body class="home-page">
+    <header class="main-header">
+        <button class="navbtn" id="navbtn"></button>
+        <nav class="nav" id="nav">
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="aboutknob.html">About Knobs</a></li>
+                <li><a href="knobtypes.html">Knob Types</a></li>
+                <li><a href="history.html">History of Effectors</a></li>
+            </ul>
+        </nav>
+        <h1>Improve Your Sound!</h1>
+    </header>
     <div class="container">
-            <header class="main-header">
-                <h1>Improve Your Sound!</h1>
-                <nav id="nav-links" class="nav-links">
-                    <ul>
-                        <li><a href="home.html">Home</a></li>
-                        <li><a href="aboutknob.html">About Knobs</a></li>
-                        <li><a href="knobtypes.html">Knob Types</a></li>
-                        <li><a href="history.html">History of Effectors</a></li>
-                    </ul>
-                </nav>
-            </header>
-            <section class="image-placeholder">
-                <img class="head-pic" src="images/knob1-home1.webp" alt="head pic" loading="lazy">
-            </section>
-            <section class="content">
-                <article class="content-block">
-                    <h2>What are effectors and their knobs?</h2>
-                    <p>Effector is a device used to add changes to the sound of electronic instruments such as guitars and synthesizers. By using an effector, you can add distortion to a guitar's sound or delay the sound of a synthesizer. Effectors can change the original sound, making it possible to transform it into a variety of different tones. This is fascinating because it brings and enhances creativity in music production, making effectors is a wonderful tool. A knob is a rotary control used to adjust the sound. By turning the knob, you can adjust the effect of the effector. The interesting thing about knobs is that even a slight turn can change the sound completely. Finding the perfect sound by turning the knobs is truly enjoyable.</p>
-                </article>
-                <article class="content-block">
-                    <h2>What can I learn from this site?</h2>
-                    <p>On the About Knobs page, you can learn about effectors and their knobs! On the Knob Functions page, describes the different types of knobs, their meanings, and how to use them! On the Effector History page, you can learn about the history of effectors!</p>
-                </article>
-                <img class="home-pic" src="images/knob1.webp" alt="home pic" loading="lazy">
-            </section>
-            <footer class="footer">
-                <p>&copy; 2024 Eimi Miyake Japan</p>
-                <p>Last modified: <span id="lastModified"></span></p>
-            </footer>
-        </main>
+        <div class="image-placeholder">
+            <div class="img">
+            <img class="head-pic" src="images/knob1-home1.webp" alt="head pic" loading="lazy">
+            </div>
     </div>
+    <div class="content">
+            <article class="content-block">
+                <h2>What are effectors and their knobs?</h2>
+                <p>Effector is a device used to add changes to the sound of electronic instruments such as guitars and synthesizers. By using an effector, you can add distortion to a guitar's sound or delay the sound of a synthesizer. Effectors can change the original sound, making it possible to transform it into a variety of different tones. This is fascinating because it brings and enhances creativity in music production, making effectors is a wonderful tool. A knob is a rotary control used to adjust the sound. By turning the knob, you can adjust the effect of the effector. The interesting thing about knobs is that even a slight turn can change the sound completely. Finding the perfect sound by turning the knobs is truly enjoyable.</p>
+            </article>
+            <article class="content-block">
+                <h2>What can I learn from this site?</h2>
+                <p>On the About Knobs page, you can learn about effectors and their knobs! On the Knob Functions page, describes the different types of knobs, their meanings, and how to use them! On the Effector History page, you can learn about the history of effectors!</p>
+            </article>
+            <div class="img">
+            <img class="home-pic" src="images/knob2-home2.jpeg" alt="home pic" loading="lazy">
+            </div>
+    </div>
+    </div>
+        <footer>
+            <p>&copy; <span id="currentyear"></span> Eimi Miyake Japan</p>
+            <p id="lastModified"></p>
+        </footer>
     <script src="scripts/effector.js"></script>
 </body>
 </html>
