--- a/project/knobtypes.html
+++ b/project/knobtypes.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,19 +12,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
-<body class="home-page">
-    <div class="container">
-            <header class="main-header">
-                <h1>Improve Your Sound!</h1>
-                <nav id="nav-links" class="nav-links">
-                    <ul>
-                        <li><a href="home.html">Home</a></li>
-                        <li><a href="aboutknob.html">About Knobs</a></li>
-                        <li><a href="knobtypes.html">Knob Types</a></li>
-                        <li><a href="history.html">History of Effectors</a></li>
-                    </ul>
-                </nav>
-            </header>
+<body class="knob-page">
+        <header class="main-header">
+            <button class="navbtn" id="navbtn"></button>
+            <nav class="nav" id="nav">
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="aboutknob.html">About Knobs</a></li>
+                    <li><a href="knobtypes.html">Knob Types</a></li>
+                    <li><a href="history.html">History of Effectors</a></li>
+                </ul>
+            </nav>
+            <h1>Improve Your Sound!</h1>
+        </header>
+        <div class="container">
         <main class="main-content">
         
             <section id="knob-types">
@@ -157,12 +159,12 @@
                 </div>
                 <p id="favorite-display"></p>
             </section>
-            <footer>
-                <p>&copy; 2024 Eimi Miyake Japan</p>
-                <p>Last modified: <span id="lastModified"></span></p>
-            </footer>
         </main>
-    </div>
+        </div>
+        <footer>
+            <p>&copy; <span id="currentyear"></span> Eimi Miyake Japan</p>
+            <p id="lastModified"></p>
+        </footer>
     <script src="scripts/effector.js"></script>
 </body>
 </html>
